<resources>
    <string name="app_name">Nate\'s Wings</string>
    <string name="customer_name">Customer name</string>
    <string name="order_page_header">Chicken Wing Order Page</string>
    <string name="sauces">Sauces:</string>
    <string name="hickory_bbq">Hickory BBQ</string>
    <string name="honey_chipotle">Honey chipotle</string>
    <string name="teriyaki">Teriyaki</string>
    <string name="buffalo">Buffalo</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">0</string>
    <string name="order">Order</string>
    <string name="order_instructions">Enter your name, pick your sauces,
        and then choose your quantity.  Wings are $1 for 2 and each sauce is $2 a piece</string>
    <string name="thank_you">Thank you for your order!</string>
    <string name="key_order_summary">orderSummary</string>
</resources>
